--- a/assets/css/helper.css
+++ b/assets/css/helper.css
@@ -15,3 +15,67 @@
   display: flex;
   align-items: center;
 }
+
+/* transition */
+
+.intro-enter-active,
+.intro-leave-active {
+  transition-duration: 1600ms;
+}
+.intro-enter-active::before, .intro-enter-active::after,
+.intro-leave-active::before,
+.intro-leave-active::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: block;
+  width: 100%;
+  height: 50%;
+  transition-property: opacity, transform;
+  transition-timing-function: ease-in-out;
+}
+.intro-enter-active::before,
+.intro-leave-active::before {
+  background-color: #000;
+}
+.intro-enter-active::after,
+.intro-leave-active::after {
+  top: 50%;
+  background-color: #000;
+}
+
+.intro-leave::before, .intro-leave::after {
+  transform: scaleX(0);
+}
+
+.intro-leave-active::before {
+  transition-duration: 800ms;
+}
+.intro-leave-active::after {
+  transition-duration: 500ms;
+  transition-delay: 300ms;
+}
+
+.intro-leave-to::before, .intro-leave-to::after {
+  transform: scale(1);
+  transform-origin: left;
+}
+
+.intro-enter::before, .intro-enter::after {
+  transform: scaleX(1);
+}
+
+.intro-enter-active::before {
+  transition-duration: 800ms;
+}
+.intro-enter-active::after {
+  transition-duration: 500ms;
+  transition-delay: 300ms;
+}
+
+.intro-enter-to::before, .intro-enter-to::after {
+  transform: scaleX(0);
+  transform-origin: right;
+}
