--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -361,5 +361,8 @@ textarea {
     padding: 0.2em 0;
 }
 body {
+  font-family: 'Intro', monospace;
+}
+h1, h2, h3, h4, h5 {
   font-family: 'Gabriela', serif;
 }
