change home page and menu items

--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Bebas+Neue&family=Gabriela&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Bebas+Neue&family=Gabriela&family=PT+Mono&display=swap');
 
 @font-face {
   font-family: 'Intro';
